tests/snapshots/integration_tests__codegen_cnn_demo.snap
---
source: tests/integration_tests.rs
expression: code
---
import torch
import torch.nn as nn
from neuroscript_runtime.primitives.activations import ReLU
from neuroscript_runtime.primitives.convolutions import Conv2d
from neuroscript_runtime.primitives.linear import Linear
from neuroscript_runtime.primitives.normalization import BatchNorm
from neuroscript_runtime.primitives.pooling import GlobalAvgPool
from neuroscript_runtime.primitives.pooling import MaxPool
from neuroscript_runtime.primitives.structural import Flatten

class CNN(nn.Module):
    def __init__(self, in_channels, num_classes):
        super().__init__()
        self.in_channels = in_channels
        self.num_classes = num_classes
        self.conv1 = Conv2d(in_channels, 32, 3, padding=1)
        self.bn1 = BatchNorm(32)
        self.act1 = ReLU()
        self.pool1 = MaxPool(2, stride=2)
        self.conv2 = Conv2d(32, 64, 3, padding=1)
        self.bn2 = BatchNorm(64)
        self.act2 = ReLU()
        self.pool2 = MaxPool(2, stride=2)
        self.conv3 = Conv2d(64, 128, 3, padding=1)
        self.bn3 = BatchNorm(128)
        self.act3 = ReLU()
        self.gap = GlobalAvgPool()
        self.flat = Flatten(1)
        self.head = Linear(128, num_classes)

    def forward(self, x):
        x0 = self.conv1(x)
        x1 = self.bn1(x0)
        x2 = self.act1(x1)
        x3 = self.pool1(x2)
        x4 = self.conv2(x3)
        x5 = self.bn2(x4)
        x6 = self.act2(x5)
        x7 = self.pool2(x6)
        x8 = self.conv3(x7)
        x9 = self.bn3(x8)
        x10 = self.act3(x9)
        x11 = self.gap(x10)
        x12 = self.flat(x11)
        x13 = self.head(x12)
        return x13
