tests/snapshots/integration_tests__codegen_fat_arrow_basic.snap
---
source: tests/integration_tests.rs
expression: code
---
import torch
import torch.nn as nn

class MultiHeadReshape(nn.Module):
    def __init__(self, dim, heads):
        super().__init__()
        self.dim = dim
        self.heads = heads
        pass

    def forward(self, x):
        batch = x.size(0)
        seq = x.size(1)
        dh = self.dim // self.heads
        x_2 = x.reshape(batch, seq, self.heads, dh)
        batch = x_2.size(0)
        seq = x_2.size(1)
        dh = x_2.size(3)
        x_3 = x_2.reshape(batch, self.heads, seq, dh)
        return x_3
