tests/snapshots/integration_tests__codegen_fat_arrow_flatten_tail.snap
---
source: tests/integration_tests.rs
expression: code
---
import torch
import torch.nn as nn

class FlattenTail(nn.Module):
    def __init__(self):
        super().__init__()
        pass

    def forward(self, x):
        b = x.size(0)
        x_2 = x.reshape(b, -1)
        return x_2
