tests/snapshots/integration_tests__codegen_fat_arrow_reduce.snap
---
source: tests/integration_tests.rs
expression: code
---
import torch
import torch.nn as nn

class GlobalAvgPool(nn.Module):
    def __init__(self):
        super().__init__()
        pass

    def forward(self, x):
        b = x.size(0)
        c = x.size(1)
        x_2 = x.mean(dim=(2, 3))
        return x_2
