tests/snapshots/integration_tests__codegen_fat_arrow_repeat.snap
---
source: tests/integration_tests.rs
expression: code
---
import torch
import torch.nn as nn

class ExpandDim(nn.Module):
    def __init__(self):
        super().__init__()
        pass

    def forward(self, x):
        b = x.size(0)
        c = x.size(1)
        h = x.size(2)
        w = x.size(3)
        x_3 = x.unsqueeze(2)
        x_2 = x_3.expand(b, c, 1, h, w)
        return x_2
